# P2E

./: .gitignore  CHANGELOG.md  COMPARISON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  run_web.py  setup.py
.github/: FUNDING.yml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
examples/: gui_example.py  simple_example.py
p2e/: __init__.py
p2e/cli/: __init__.py  app.py
p2e/core/: __init__.py  config.py  converter.py
p2e/templates/: basic_config.yaml  gui_app_config.yaml
p2e/utils/: __init__.py  logger.py  validators.py
p2e/web/: __init__.py  app.py
python_code/: p2e.py  p2e_streamlit.py  streamlit_app.py
tests/: __init__.py  test_config.py  test_validators.py
